# side-learning-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
examples/: README.md  better-example-context.json  sample_context.json
session_designer/: README.md  __init__.py
session_designer/api/: __init__.py  main.py
session_designer/cli/: README.md  __init__.py  main.py  preview.py
session_designer/data/: README.md  __init__.py  repository.py
session_designer/domain/: README.md  __init__.py  llm_contracts.py  models.py  output.py  session_schema.py
session_designer/graph/: README.md  __init__.py  builder.py  deps.py  nodes.py  state.py
session_designer/prompts/: README.md  __init__.py  templates.py
session_designer/providers/: README.md  __init__.py  anthropic_provider.py  base.py  mock_provider.py
session_designer/resources/: README.md  __init__.py  gatherer.py
tests/: test_output_contract.py  test_user_context_repository.py  test_user_interest_context.py
